tests/regression/300_ADVANCED_FEATURES/330_KEYWORD/330_002_keyword_collision/expected.txt
ERROR: Ambiguous keyword 'process' - defined in:
  - lib_a:process (from lib_a)
  - lib_b:process (from lib_b)
error: AmbiguousKeyword
/Users/larsde/src/koru/src/keyword_registry.zig:97:17: 0x102db6497 in resolveKeyword (koruc)
                return error.KeywordCollision;
                ^
/Users/larsde/src/koru/src/main.zig:5130:13: 0x102db6093 in resolveKeywordInPath (koruc)
            return error.AmbiguousKeyword;
            ^
/Users/larsde/src/koru/src/main.zig:4922:13: 0x102db78d3 in resolveKeywordsInItem (koruc)
            try resolveKeywordInPath(&flow.invocation.path, registry, allocator, main_module);
            ^
/Users/larsde/src/koru/src/main.zig:4905:9: 0x102db7c2b in resolveKeywordsInAST (koruc)
        try resolveKeywordsInItem(item, registry, allocator, main_module, items);
        ^
/Users/larsde/src/koru/src/main.zig:6465:9: 0x102edb73f in main (koruc)
        try resolveKeywordsInAST(@constCast(source_file.items), &kw_registry, parse_allocator, source_file.main_module_name);
        ^
